--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-Тестовая страница
+<!DOCTYPE html>
+<html lamg = "ru">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Семестровая работа</title>
+    </head>
+    <body>
+        <div id="header">Хэдер</div>
+        <div id="menu">
+            <ul>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="pages/news.html">Новости</a></li>
+                <li><a href="pages/practices.html">Практики</a></li> 
+                <li><a href="pages/goods.html">Товары</a></li>
+                <li><a href="pages/contacts.html">Контакты</a></li>
+            </ul>
+        </div>
+        <div id="content">
+            <p>Информация об авторе</p>
+            <img src="c:\Users\zhak2\Downloads\5456125487479915557.png
+            " alt="Фото автора" width="200" height="250">
+            <p>Маматалие Жакшылык Суйорбекович</p>
+            <p>ЭФБО-18-24</p>
+            <p>Обо мне: Ром среди камышей в болоте вместе со Шреком, но 2 года решил что хватит и ушел за хлебом</p>
+            <div>Навык 1</div>
+            <div>Навык 2</div>
+            <div>Навык 3</div>
+            <div>Навык 4</div>
+            <div>
+                Мой опыт работы:
+                <div>
+                    Опыт 1<br>
+                    Работал гением. Придумывал и изобретал 
+                </div>
+                <div>
+                    Опыт 2<br>
+                    Работал компьютером. Вычислял и играл
+                </div>
+                <div>
+                    Опыт 3<br>
+                    Работал в криптовалюте. Кайфовал и зарабтаывал.
+                </div>
+            </div>
+        </div>
+        <div id="footer">Футер</div>    
+    </body>
+</html>
