--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div id="content">
             <p>Информация об авторе</p>
-            <img src="c:\Users\zhak2\Downloads\5456125487479915557.png" alt="Фото автора" width="200" height="250">
+            <img src="../images/1.png" alt="Фото автора" width="200" height="250">
             <p>Маматалиев Жакшылык Суйорбекович</p>
             <p>ЭФБО-18-24</p>
             <p>Обо мне: Рос среди камышей в болоте вместе со Шреком, но 2 года решил что хватит и ушел за хлебом.</p>
